--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1>Kamikaze!</h1>
+    <h2>Testing heroku deployment</h2>
+    <h3>Functioning correctly!</h3>
+    <script src="/index.js"></script>
+    <img src="https://static.wikia.nocookie.net/elderscrolls/images/b/b2/Dragon.svg/revision/latest/scale-to-width-down/250?cb=20111119103408">
 </body>
-<script src="/index.js"></script>
 </html>
